Removed secret values

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -1,6 +1,7 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=VERUSHANN\\SQLEXPRESS;Initial Catalog=Bookmarker;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  "Jwt": {
+    "Issuer": "bookmarkers.com",
+    "Audience": "bookmarkers.com"
   },
   "Logging": {
     "LogLevel": {
