--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -1,9 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
+	  <UserSecretsId>4f28212e-ceda-4dff-bca7-1f83f5331e8b</UserSecretsId>
+  </PropertyGroup>
+
+	<PropertyGroup>
+		<ContainerImageName>products-crud-api</ContainerImageName>
+		<ContainerImageTags>latest</ContainerImageTags>
+		<PublishProfile>DefaultContainer</PublishProfile>
+		<RuntimeIdentifier>linux-x64</RuntimeIdentifier>
 	</PropertyGroup>
 
 	<ItemGroup>
