Added shared folder to project configuration

--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -29,4 +29,6 @@
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.5.0" />
 	</ItemGroup>
 
+	<Import Project="..\Shared\Shared.projitems" Label="Shared" />
+
 </Project>
