--- a/.github/workflows/deploy-api-server.yaml
+++ b/.github/workflows/deploy-api-server.yaml
@@ -3,7 +3,7 @@ name: Deploy API Server
 on: 
     pull_request:
         branches:
-            - main
+            - dev
     push:
         branches:
             - main
