feature/server-deployment: agh changed ubutu to ubuntu.

--- a/.github/workflows/deploy-api-server.yaml
+++ b/.github/workflows/deploy-api-server.yaml
@@ -14,7 +14,7 @@ permissions:
 
 jobs:
     deploy-to-ec2:
-        runs-on: ububtu-latest
+        runs-on: ubuntu-latest
 
         steps:
         - name: Checkout Code
