--- a/.github/workflows/deploy-api-server.yaml
+++ b/.github/workflows/deploy-api-server.yaml
@@ -30,7 +30,7 @@ jobs:
         - name: Setup dotnet
           uses: actions/setup-dotnet@v4
           with:
-            dotnet-version: '4.0.0'
+            dotnet-version: 8.x
 
         - name: Install ASP.NET Core
           run: dotnet tool install --global dotnet-aspnet-codegenerator
