--- a/.github/workflows/deploy-api-server.yaml
+++ b/.github/workflows/deploy-api-server.yaml
@@ -61,7 +61,7 @@ jobs:
               ssh -i pvt_key.pem ec2-user@${{ env.EC2_IP }} "sudo systemctl stop server.service && \
               rm -rf /home/ec2-user/server/*"
               tar -czvf api_archive.tar.gz -C ./Api/bin/Release/net8.0/publish/ .
-              scp -i pvt_key.pem api_archive.tar.gz ec2-user@${{ env.EC2_IP }}:/home/ec2-user/server/
+              scp -v -i pvt_key.pem api_archive.tar.gz ec2-user@${{ env.EC2_IP }}:/home/ec2-user/server/
               ssh -i pvt_key.pem ec2-user@${{ env.EC2_IP }} "tar -xzvf /home/ec2-user/server/api_archive.tar.gz -C /home/ec2-user/server && \
               rm /home/ec2-user/server/api_archive.tar.gz && \"
               sudo systemctl start server.service"
