--- a/.github/workflows/deploy-api-server.yaml
+++ b/.github/workflows/deploy-api-server.yaml
@@ -62,6 +62,6 @@ jobs:
               rm -rf /home/ec2-user/server/*"
               tar -czvf api_archive.tar.gz -C ./Api/bin/Release/net8.0/publish/ .
               scp -v -i pvt_key.pem api_archive.tar.gz ec2-user@${{ env.EC2_IP }}:/home/ec2-user/server/
-              ssh -i pvt_key.pem ec2-user@${{ env.EC2_IP }} "tar -xzvf /home/ec2-user/server/api_archive.tar.gz -C /home/ec2-user/server && \
-              rm /home/ec2-user/server/api_archive.tar.gz && \"
+              ssh -i pvt_key.pem ec2-user@${{ env.EC2_IP }} "tar -xzvf /home/ec2-user/server/api_archive.tar.gz /home/ec2-user/server && \
+              rm /home/ec2-user/server/api_archive.tar.gz && \
               sudo systemctl start server.service"
