--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -9,5 +9,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:5170"
+      },
+      "Https": {
+        "Url": "https://0.0.0.0:7170"
+      }
+    }
+  }
 }
