--- a/Extension/ToolWindow/Extension.csproj
+++ b/Extension/ToolWindow/Extension.csproj
@@ -46,6 +46,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Add_Bookmark.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="GetSelectedText.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Bookmarker.cs" />
