Updated workflows to watch folders

--- a/.github/workflows/deploy-api-server.yaml
+++ b/.github/workflows/deploy-api-server.yaml
@@ -5,6 +5,8 @@ on:
         branches:
             - main
             - dev
+        paths:
+            - "Api/**"
 
 permissions:
     contents: read
