--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,9 @@ jobs:
 
         - name: Build and publish project
           run: |
+            cd frontendProgram
             dotnet workload restore
+            dotnet build -f net8.0-windows10.0.19041.0 -c Release -p:RuntimeIdentifierOverride=win10-x64
             dotnet build -c Release "./frontendProgram/Maui Front End.csproj"
             dotnet publish -f net8.0-windows10.0.19041.0 -c Release "./frontendProgram/Maui Front End.csproj"
         
@@ -41,4 +43,4 @@ jobs:
             prerelease: false
             title: "Windows UI release"
             files: |
-              frontendProgram/bin/Release/*
+              frontendProgram/bin/Release/net8.0-windows10.0.19041.0/win10-x64/*
