--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,7 @@ on:
       - dev
     paths:
         - "frontendProgram/**"
+        - ".github/workflows/release.yml"
 
 jobs:
    make-release:
@@ -41,4 +42,4 @@ jobs:
             prerelease: false
             title: "Windows UI release"
             files: |
-              frontendProgram/bin/Release/net8.0-windows10.0.19041.0/win10-x64/*
+              frontendProgram/bin/Release/net8.0-windows10.0.19041.0/win10-x64/
