--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,4 +46,4 @@ jobs:
             prerelease: false
             title: "Windows UI release"
             files: |
-              frontendProgram/bin/Release/net8.0-windows10.0.19041.0/win10-x64/
+              ./win10-x64.zip
