Updated frontendProgram publish workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,4 +48,4 @@ jobs:
             prerelease: false
             title: "Windows UI"
             files: |
-              ".\**\AppPackages\**\*.*"
+              *.msix
