--- a/Extension/Extension.csproj
+++ b/Extension/Extension.csproj
@@ -81,6 +81,12 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
+  <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp3.1' ">
+    <ProjectReference Include="..\mopcore\MopCore.csproj" />
+  </ItemGroup>
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net472' ">
+      <ProjectReference Include="..\MopStandard\MopFW.csproj" />
+  </ItemGroup>
   <ItemGroup>
     <VSCTCompile Include="ExtensionPackage.vsct">
       <ResourceName>Menus.ctmenu</ResourceName>
@@ -97,5 +103,4 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-  <Import Project="..\Shared\Shared.projitems" Label="Shared" />
 </Project>
