--- a/frontendProgram/Maui Front End.csproj
+++ b/frontendProgram/Maui Front End.csproj
@@ -37,6 +37,7 @@
 	<PropertyGroup Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows' and '$(Configuration)' == 'Release'">
 		<AppxPackageSigningEnabled>true</AppxPackageSigningEnabled>
 		<GenerateAppxPackageOnBuild>true</GenerateAppxPackageOnBuild>
+		<PublishSingleFile>true</PublishSingleFile>
 		<WindowsPackageType>MSIX</WindowsPackageType>
 	</PropertyGroup>
 	<PropertyGroup Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows' and '$(RuntimeIdentifierOverride)' != ''">
