--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,4 +48,4 @@ jobs:
             prerelease: false
             title: "Windows UI"
             files: |
-              ./frontendProgram/bin/Release/net8.0-windows10.0.19041.0/win10-x64/AppPackages/*
+              "./frontendProgram/bin/Release/net8.0-windows10.0.19041.0/win10-x64/AppPackages/Maui Front End_1.0.0.1_Test"
