--- a/.github/workflows/postman-integration.yaml
+++ b/.github/workflows/postman-integration.yaml
@@ -1,7 +1,7 @@
 name: Run Integration Tests
 
 on: 
-    pull_requests:
+    pull_request:
         branches:
             - main
             - dev
