--- a/.github/workflows/postman-integration.yaml
+++ b/.github/workflows/postman-integration.yaml
@@ -31,4 +31,10 @@ jobs:
         - name: Run Postman Integration Tests
           run: |
             mkdir -p testResults
-            newman run ./.postman/bookmark-integration-tests.json
+            newman run ./.postman/bookmark-integration-tests.json --reporter htmlextra
+        
+        - name: Output test results
+          uses: actions/upload-artifact@v4
+          with:
+            name: Reports
+            path: testResults
