--- a/.github/workflows/postman-integration.yaml
+++ b/.github/workflows/postman-integration.yaml
@@ -31,7 +31,7 @@ jobs:
         - name: Run Postman Integration Tests
           run: |
             mkdir -p testResults
-            newman run ./.postman/bookmark-integration-tests.json --reporter htmlextra
+            newman run ./.postman/bookmark-integration-tests.json --reporters htmlextra
         
         - name: Output test results
           uses: actions/upload-artifact@v4
