--- a/.github/workflows/postman-integration.yaml
+++ b/.github/workflows/postman-integration.yaml
@@ -5,6 +5,8 @@ on:
         branches:
             - main
             - dev
+        paths:
+            - "Api/**"
 
 permissions:
     contents: read
