--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,7 @@ on:
       - dev
     paths:
         - "frontendProgram/**"
+        - "Shared/**"
         - ".github/workflows/release.yml"
 jobs:
    make-release:
